Style / naming / polish changes